plugins {
    id 'org.springframework.boot' version '2.3.0.RELEASE'
    id 'io.spring.dependency-management' version '1.0.9.RELEASE'
    id 'java'
}

group = 'org.orekyuu'
version = '0.0.1'
sourceCompatibility = '14'

tasks.withType(JavaCompile) {
    options.compilerArgs += ['--enable-preview']
}

compileJava {
    options.compilerArgs += ['-Adoma.domain.converters=org.orekyuu.nozomi.infrastructure.doma.converter.DomainConvertersProvider']
}

test {
    jvmArgs = ['--enable-preview']
    useJUnitPlatform()
    testLogging {
        exceptionFormat 'full'
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.seasar.doma.boot:doma-spring-boot-starter:1.4.0'
    implementation "org.seasar.doma:doma-core:2.37.0"
    annotationProcessor "org.seasar.doma:doma-processor:2.37.0"
    runtimeOnly 'mysql:mysql-connector-java'

    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    testImplementation('org.springframework.boot:spring-boot-starter-test') {
        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
    }
    testImplementation 'org.assertj:assertj-db:1.3.0'
}
